# RedSEC

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo_report.html  pyproject.toml
.github/workflows/: ci.yml
docs/: THEORETICAL_BACKGROUND.md
redsec/: __init__.py  cli.py
redsec/correlation/: __init__.py  engine.py
redsec/correlation/rules/: default.yaml
redsec/exporters/: __init__.py  html.py  logzilla.py  sec.py
redsec/mitre/: __init__.py  mapper.py
redsec/models/: chain.py  event.py
redsec/parsers/: __init__.py  base.py  nmap.py  nuclei.py
redsec/scoring/: __init__.py  detection.py
redsec/smart_correlation/: __init__.py  detector.py  reducer.py
tests/: test_correlation.py  test_logzilla_exporter.py  test_sec_exporter.py  test_smart_correlation.py
tests/fixtures/: large_nuclei_sample.jsonl
