[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redsec"
version = "1.0.0"
description = "Red team log aggregation and correlation tool with SEC integration"
authors = [{name = "alisalive"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "click>=8.0",
]

[project.scripts]
redsec = "redsec.cli:redsec"

[project.urls]
Homepage = "https://github.com/alisalive/redsec"
"SEC Reference" = "https://github.com/simple-evcorr/sec"
